gcc/testsuite/rust/rustc/ui/suggestions/suggest-closure-return-type-1.rs
fn main() {
    let _v = || -> _ { [] }; // { dg-error ".E0282." "" { target *-*-* } }
}

